added note on snapshots

--- a/country_products.ipynb
+++ b/country_products.ipynb
@@ -8,6 +8,31 @@
   {
    "cells": [
     {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Abstract"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**Note on Snapshots**\n",
+      "\n",
+      "There is a discussion on whether we should use snapshots or cumulative snapshots. The questions refers to the \"economic\" value of the measure. Is it more relevant to measure the accumulative experience by contributors (i.e. favor cumulative snapshots), or rather the work over a given period ? Both metrics are valid, but because activity on websites is generally more cumulative than anything else, we'll start we cumulative snapshots. Hence, snapshot at $t+1$ will incorporate information from snapshot at $t$."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
