moving loading into main notebook

--- a/country_products.ipynb
+++ b/country_products.ipynb
@@ -27,14 +27,6 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
      "input": [
       "import pywikibot\n",
       "from pywikibot import pagegenerators\n",
@@ -67,7 +59,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -79,6 +71,114 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def load_to_matrix(pandas_json_file):\n",
+      "    df = pd.read_json(pandas_json_file)\n",
+      "    u_grouped = df.groupby('user')\n",
+      "    a_grouped = df.groupby('article')\n",
+      "    ua_grouped = df.groupby(by = ['user', 'article'])\n",
+      "    \n",
+      "    '''these dicts are so we can back translate the indexes in the matrix to real users and articles'''\n",
+      "    users = list(u_grouped.groups.iterkeys())\n",
+      "    articles = list(a_grouped.groups.iterkeys())\n",
+      "    user_dict = {username: users.index(username) for username in users}\n",
+      "    article_dict = {articlename: articles.index(articlename) for articlename in articles}\n",
+      "    \n",
+      "    contributor_matrix = np.zeros(shape=(len(users), len(articles)))\n",
+      "    \n",
+      "    for user_article_tuple, timestamps in ua_grouped.groups.iteritems():\n",
+      "        user_string = user_article_tuple[0]\n",
+      "        article_string = user_article_tuple[1]\n",
+      "        user_index = user_dict[user_string]\n",
+      "        article_index = article_dict[article_string]\n",
+      "        \n",
+      "        contributor_matrix[user_index][article_index] = len(timestamps)\n",
+      "        \n",
+      "    return {'M':contributor_matrix, 'user_dict': user_dict, 'article_dict': article_dict}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pjf = 'fem/2014-01-29/10.json'\n",
+      "parts = load_to_matrix(pjf)\n",
+      "M, user_dict, article_dict = parts['M'], parts['user_dict'], parts['article_dict']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def plot_M_diff(M_before, M_after):\n",
+      "    fig, ax = plt.subplots(nrows=1, ncols=2, sharex=True, sharey=True)\n",
+      "    ax[0].imshow(M_before, cmap=plt.cm.gray, interpolation='nearest')\n",
+      "    ax[1].imshow(M_after, cmap=plt.cm.gray, interpolation='nearest')\n",
+      "    plt.figure(figsize=(10,15))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def M_test_triangular(M):\n",
+      "    user_edits_sum = M.sum(axis=1)\n",
+      "    article_edits_sum = M.sum(axis=0)\n",
+      "    \n",
+      "    user_edits_order = user_edits_sum.argsort()\n",
+      "    article_edits_order = article_edits_sum.argsort()\n",
+      "    \n",
+      "    M_s = M[user_edits_order,:]\n",
+      "    M_ss = M_s[:,article_edits_order]\n",
+      "    plot_M_diff(M, M_ss)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "M_test_triangular(M)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAXMAAAD9CAYAAABOd5eOAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHnxJREFUeJzt3W1MW9f9B/CvwYaQ5Yk2jYlwJOvPQxwnaaBNIJPWyVlq\nkrSKxZoKhUaZ1aRvFrVq9mJdujcjkxbIthdLV/GmSisrlQZM3QBNLSLV5i3btJAm2SrNzWCTo4EB\nqykhjxCDff4vWjwDBj9d+95z/f1IKI65vudn8/Pv3nvuuecahBACREQktQK1AyAiosyxmBMR6QCL\nORGRDrCYExHpAIs5EZEOsJgTEelAVop5X18fbDYbqqqqcPbs2Ww0QUREMQxKjzMPh8PYvHkzPv74\nY5SXl2PXrl341a9+hS1btijZDBERxVB8z3xgYACVlZWwWq0wmUw4fPgwenp6lG6GiIhiKF7MA4EA\nNm3aFP2/xWJBIBBQuhkiIophVHqFBoNBkWWIMqHWLBXMbcq2pXJb8T3z8vJyDA8PR/8/PDwMi8US\nNyAhBH70ox9FH6v1Ew6Hlf4Y8ko4HM7q3yfVHFGbVvKauZ25bOZ2OjmyHMWL+c6dOzE0NISbN28i\nFAqhs7MTLpdL6WaIiCiG4t0sRqMRb7/9Nvbt24dwOIzjx49zJEsWFBUVIRQKqR0GEWmE4sUcAA4c\nOIADBw4ktazD4chGCLqXT4VcxhyRMeZ8ZTQaMTs7m/N2lc4RxceZJ9WowaCJvs05kUgEhYWFaoch\nrXA4jIIC7VxMrGZ+Mbf1Rabc1k6UEsjWl2LNmjVZWe9C/FIT6ReLeQqyNTLg7t27WVnvQhzZQKRf\nLOY0D/feKV8ZjVk5hZgzLOY0D/feKV+pcRJUSSzmeYh730RLk3UPncVcUiUlJWm/lnvfREuTdQ+d\nxVxSU1NTaodARBrCYk5EpAMs5kREOsBiTkSkAyzmREQ6wGJORAT5byzCYk5EBPXuTqUUFnMiIh1g\nMVeAyWRSOwQiynMs5gqYmZlROwQiynMs5kREOsBiLilOlkVEsVjMJcXJsoh4vioWizkRSYvnq/6H\nxZyISAdYzBVQVFSkdghElOdYzBUQCoVSWl72y4aJSHtYzFUg+2XDRKQ9CYv5sWPHYDabsX379uhz\nExMTcDqdqK6uRkNDAyYnJ6O/a21tRVVVFWw2G/r7+7MTNRERzZOwmL/88svo6+ub91xbWxucTicG\nBwexd+9etLW1AQB8Ph86Ozvh8/nQ19eHEydOIBKJZCdyIiKKSljMn3nmGZSWls57rre3F263GwDg\ndrvR3d0NAOjp6UFzczNMJhOsVisqKysxMDCQhbCJiLJHxvHrafWZB4NBmM1mAIDZbEYwGAQAjI6O\nwmKxRJezWCwIBAIKhElERMsxZroCg8Gw7OiMpX7X0tISfexwOOBwODINhfKU1+uF1+tVO4wo5rb8\ntHIxUkq5LZLg9/vFtm3bov/fvHmzGBsbE0IIMTo6KjZv3iyEEKK1tVW0trZGl9u3b5/429/+tmh9\nSTabM+FwWADgT5o/4XBY7T/hPGrmF3NbXz8y5XZa3SwulwsejwcA4PF40NjYGH2+o6MDoVAIfr8f\nQ0NDqKurS6cJSkDtsepqt0+UTTL2mSfsZmlubsYf//hH3Lp1C5s2bcKPf/xjnDp1Ck1NTTh//jys\nViu6uroAAHa7HU1NTbDb7TAajWhvb+eXPg6DwZDxWPNMX59pLEq1T6RFMzMz0hV0g1DhW6lEMVNS\nJBLJ6ZSyWnv/mQqHwygo0M71Z2p+vlr72+Y6t/VGptzWTpR5REtf9nTxiItIW1jMdSBbe17L7ZGw\nmBNpC4u5DmTrRhXLXb3LK3uJtIXFXOe4B02UPJm/LyzmOqeH/nmiXJH5+8JinoDMW+pYenkfRBQf\ni3kCMm+pY+nlfRBRfCzmRKQaozHj6aHoKyzmGrBUF0iyXSNKdaGwK4ZybXZ2Vu0QdJP3LOYasFQX\nSLJdI0p1obArhvKRXvKexZyIKIasXT8s5kSkabnuBtFC1086WMyJSNOU6gaRbRbEVLGYE1Fe0Mrd\ng7KFxTyHtDSVJhEtTca9eFaXHFJjciq9DLsiyiUZ+81ZzHUuG8OuuIEgvZNxuCKL+RIef/zxnLWV\naXEsKSlRKJLkCCGkHb5FpFe8bRx4a61MyXRrLT23HQ9zOzMy5bZ2oiQiorSxmBMR6QCLORGRDrCY\nExHpAIs5EZEOsJgTEX1F5msoWMyJiL6ipWGlqUpYzIeHh7Fnzx5s3boV27Ztw1tvvQUAmJiYgNPp\nRHV1NRoaGjA5ORl9TWtrK6qqqmCz2dDf35+96IkoJ2ScqyTfJLxoaHx8HOPj46ipqcH9+/fx9NNP\no7u7G++99x7Wr1+PN954A2fPnsXt27fR1tYGn8+Hl156CVeuXEEgEMCzzz6LwcHBeQPveWGFvsh0\nYYWe246HuZ0ZmXI7YZRlZWWoqakBAKxatQpbtmxBIBBAb28v3G43AMDtdqO7uxsA0NPTg+bmZphM\nJlitVlRWVmJgYECp95I3ioqK1A6BiCSS0gQbN2/exPXr11FfX49gMAiz2QwAMJvNCAaDAIDR0VHs\n3r07+hqLxYJAILBoXS0tLdHHDocDDocjjfD1KxQKqR2CNLxeL7xer9phRDG35aO1I6o5KeW2SNK9\ne/fEU089JX77298KIYRYt27dvN+XlpYKIYR49dVXxfvvvx99/vjx4+KDDz6Yt2wKzeZEOBwWAPiT\n5k84HFb7TziPmvnF3NbXj0y5nVRn0MzMDA4dOoSjR4+isbERwJd74+Pj4wCAsbExbNiwAQBQXl6O\n4eHh6GtHRkZQXl6eTDNERJSmhMVcCIHjx4/Dbrfj5MmT0eddLhc8Hg8AwOPxRIu8y+VCR0cHQqEQ\n/H4/hoaGUFdXl6XwSSm5nkaXKFvy9XxTwtEsf/7zn/HNb34TTz75ZHRAfWtrK+rq6tDU1IT//ve/\nsFqt6Orqwrp16wAAZ86cwbvvvguj0Yhz585h37598xvVWP9UJmf8Kysr8e9//1vhiOQi0xl/Pbcd\nD0ezZEam3OZ85lA/4bX2eSSjqKgoepJWpoTXc9vxqJ3bWhebx/HIlNvaiTKPaenLnyyOtiE90FMe\ns5gTUd7Qc386i/kSiouL1Q6BiBSmpz3xhVjMl/Do0SO1QyAiShqLORGRDrCYL2FhN0smIwI4moCI\nso3FfAkLu1nC4XDa60r0Wk4vSkSZYjHXgJmZGbVDIKIFZBv5wmJO86xYsULtEIhyLl7hlm3kC4s5\nzTM9Pa12CEQ5J1vhjofFnIgoDnazEBHpgGx76yzmMWKHEKa7VTYYDIuGIs7NNjn3b6LXA0g4uY/R\naFy03Nzj2PYLCgpgMBiSajt2eSKSS0q3jdO72CGE6W6VhRCLhiLOTaSVzIRac8tEIpFll5trI3a5\nucex7Sdaz0KpLk+kV7Lt1HDPXFIyzrRIJBPZvmMs5kSkO1qagzxX8u8dE5HuJeou1OMUGyzmRCS1\ndKbDyGR6Dq1iMSciqXE6jC+xmBMR6QCLORGRDrCYE1HekW0MeTJYzJdQUlKidghElCWyjSFPBov5\nEqamptQOYVlzl/MTqU2Pe7kyYjGX1OzsrNohEAHQ516ujJYt5tPT06ivr0dNTQ3sdjvefPNNAMDE\nxAScTieqq6vR0NCAycnJ6GtaW1tRVVUFm82G/v7+7EZPRJQlsh39GkSCzerDhw+xcuVKzM7O4hvf\n+AZ+/vOfo7e3F+vXr8cbb7yBs2fP4vbt22hra4PP58NLL72EK1euIBAI4Nlnn8Xg4OCiS2sNBoOm\ntuaRSCRnV4StXLkSDx8+zElbuRIOhzV1+bSa+ZXPua1lxcXFi+7rmwyZcjthlCtXrgTw5SyC4XAY\npaWl6O3thdvtBgC43W50d3cDAHp6etDc3AyTyQSr1YrKykoMDAwo9T50QW+FnEgGjx49QnFxsdph\nZFXC44hIJIKnnnoK//nPf/Dd734XW7duRTAYhNlsBgCYzWYEg0EAwOjoKHbv3h19rcViQSAQiLve\nlpaW6GOHwwGHw5HB26B85vV64fV61Q4jirmtTensmastpdwWSZqcnBT19fXi97//vVi3bt2835WW\nlgohhHj11VfF+++/H33++PHj4oMPPli0rhSazYlwOCwA8CfNn3A4rPafcB4184u5Lf9PcXGxlLmd\ndGfQ2rVr8fzzz+Pq1aswm80YHx8HAIyNjWHDhg0AgPLycgwPD0dfMzIygvLy8mSbICJSnYx78ECC\nPvNbt25FR6pMTU3h4sWLqK2thcvlgsfjAQB4PB40NjYCAFwuFzo6OhAKheD3+zE0NIS6urosvwUi\nIuXJ1se+bJ/52NgY3G43IpEIIpEIjh49ir1796K2thZNTU04f/48rFYrurq6AAB2ux1NTU2w2+0w\nGo1ob2+X/oKCwsJCXU6XSUTLk20PPeHQxKw0yuFbuiLT8C09tx1PvuR2tj53mXJbO1ESEaVJSxtQ\ntbCYE5GuFBUVqR2CKljM89D69evVDoF0TO0Th6FQSNX21cJinodu3bqldgikY7KdONQLFnMiIh1g\nMZfUmjVr1A6BiDSExVxSd+/eVTsEItIQFnNJ5esZe6J0yTY/eapYzCWVr2fsidKl97tzsZjHIfsU\nBESUf1jM4+DVZEQkGxZzIqKvyHxUzmJORPQVmY/KWcyJiHSAxZyIaIEVK1aoHULKWMyzJB/mkCbS\nE5PJFH08PT2tYiTpYTHPEt6diEguMzMz0cclJSUqRpIeFnMNSOcMusxn3Ym0bmpqSu0QUsZiroKF\nhVjpM+iJCv1yt8HiRoJIzu8Bi7kKlCjey60j0fojkUjaryXKBzJ+D1jMlxBvy5zu1jrXW3kZ9yqI\nKDMs5kuIt2VOd2ud6628jHsVRJQZFnNJsWATUSwWcwnEu4CBXSlEFIvFXAJKXcCg9l3TiSh7kirm\n4XAYtbW1OHjwIABgYmICTqcT1dXVaGhowOTkZHTZ1tZWVFVVwWazob+/PztRU1p413Qi/UqqmJ87\ndw52uz16aN/W1gan04nBwUHs3bsXbW1tAACfz4fOzk74fD709fXhxIkTyw6DIyIiZSQs5iMjI/jw\nww/xyiuvRE+69fb2wu12AwDcbje6u7sBAD09PWhubobJZILVakVlZSUGBgayGD4REQFJFPPvfe97\n+NnPfjbvqsFgMAiz2QwAMJvNCAaDAIDR0VFYLJbochaLBYFAQOmYCfMnBSIiWvZ21b/73e+wYcMG\n1NbWwuv1xl3GYDAsO7Jiqd+1tLREHzscDjgcjoTB0v/ETgqU77xe75L5qQbmNiklldw2iGUGLP/w\nhz/EhQsXYDQaMT09jbt37+KFF17AlStX4PV6UVZWhrGxMezZswc3btyI9p2fOnUKALB//36cPn0a\n9fX18xs1GDQ1TjoSiWhuytqioiKEQiG1w0hKOBxedr6XXFMzv5jb+lFQUICZmRlpcnvZKM+cOYPh\n4WH4/X50dHTgW9/6Fi5cuACXywWPxwMA8Hg8aGxsBAC4XC50dHQgFArB7/djaGgIdXV1Cr+d3Ij3\nB0x2bHfscgtfk+w6Zmdnl31NYWHhoqOieI/nllkupoXxZfJ7IlktzG3ZBm8s282y0NwbPXXqFJqa\nmnD+/HlYrVZ0dXUBAOx2O5qammC322E0GtHe3i7tFz/eHzLZPa7Y5Ra+Zs2aNbhz505K7cdrN958\n6fHaTXVagkTvUUt7nURKkj23l+1myVqjeX4oumLFCinvZLIUdrNoo+142M2SGZlyWztR5hE9FXLK\nT7IecesZi3meePzxx9UOgXRES0cf9CUW8zzxxRdfqB0CkWbEm7xOdizmRJR39NjVyWJORPQVo9EY\n97EMWMyJSHfSHYESe31H7GMZsJgTke7IdsGPEljMiUhVWhrHLTN+ijrFLwjJQkt70TKPn+c3XsMy\nmeZWS18QIlnIPH6exVzDOM0tESWLxZyISAdYzImIFvja176mdggpYzHPY0VFRWqHQKRJDx48kK6g\ns5inIJkz3QaDQZqRJEvdyUiW+Imy6cGDB2qHkBJ+axdYrpAlc6ZbCCH9SBLZ4ydK1sqVK9UOQTEs\n5gvkQyHLZMgjkZ48fPgw7vOydbEALOaqKC4uVrV9DnkkWp5sXSwAi7kqHj16pHYIRFLJ1ZWZsbfY\nk+3ckVzRElFeytWVmbE3Spety5XFnIhIB1jMiYh0gMV8CbyghohkwmK+hHgX1GTrhIhsJ1qItGb1\n6tVqh6A6VpEUZOuEiGwnWoi05t69e4quT8aNQ1LF3Gq14sknn0RtbS3q6uoAABMTE3A6naiurkZD\nQwMmJyejy7e2tqKqqgo2mw39/f3ZiZyIKEuWuphIy5Iq5gaDAV6vF9evX8fAwAAAoK2tDU6nE4OD\ng9i7dy/a2toAAD6fD52dnfD5fOjr68OJEye450lEUokdoiiLpLtZFo7z7O3thdvtBgC43W50d3cD\nAHp6etDc3AyTyQSr1YrKysroBoCIiLIj6T3zZ599Fjt37sQ777wDAAgGgzCbzQAAs9mMYDAIABgd\nHYXFYom+1mKxIBAIKB03EVFWyDp3kTGZhf7yl79g48aN+Pzzz+F0OmGz2eb93mAwLHu5bbzftbS0\nRB87HA44HI7kIta4ufeazBVrxcXFCIVC0WULCwuTPrwzGAxLtlFQUJCwayv29cutSwZerxder1ft\nMKL0mtv5QktzF6WS2waR4rf49OnTWLVqFd555x14vV6UlZVhbGwMe/bswY0bN6J956dOnQIA7N+/\nH6dPn0Z9ff3/GtVY8YhEIvPmZMhnRUVFS85zvpRwOKyp4ZVq5hdzWx6rVq3C/fv3l11GptxOGOXD\nhw+jw34ePHiA/v5+bN++HS6XCx6PBwDg8XjQ2NgIAHC5XOjo6EAoFILf78fQ0FB0BAxpX6qFnEhW\niQq5bBJ2swSDQXz7298GAMzOzuLIkSNoaGjAzp070dTUhPPnz8NqtaKrqwsAYLfb0dTUBLvdDqPR\niPb29pzNeEZE+pXKUY/WjpByIeVuFkUa1dgHzUPRzMh0KKrntuNhbmdGptzWTpRERJQ2FnMiksK6\ndevUDkHTWMyJSAqxU4bQYizmCuAJXiL9ke1IgMVcAVo64UVEypDtSIDFnIg0yWhM6gJ1xWlp9Eoq\n5Iyasqq4uFjtEEgi2Rr6ODs7m5X1JiLrLK8s5rTIo0eP1A6BJCLjdLF6xGIuKZ50JcoungClnOBJ\nV8p3SnfvLFwfT4ASEeVAut07C49q5/4ve3cRizkR5ZWFR7XxjnIfe+yxXIWjGBZzIspr8c4/TUxM\nqBBJZljMiSiv6eX8E4u5pIqKitQOgYg0hMVcUrwjEFF2PPHEE2qHkBYWcyKiGJ9//rnaIaSFxZyI\nSAdYzFOQrTkoeDUnUXrWrl2rdgiawWKegmxdVKCXs+lE6chkJ+nOnTuKxCDrTImx5H8HRCQ1LVx5\nKetMibFYzHVAyb0K3smd9C6Zbk0Zuz5ZzHVAyb0KLewlEWVTMt2aMnZ9sphL6v/+7//UDoFItzZu\n3Kh2CCkzCBU2QQaDQVNbvkgkoonuBaPRqNrdVTIRDoc1dQJJzfxibuuLTLmtnSh1LpnL72Us5ER6\nEdtPrqUCnqykIp6cnMSLL76ILVu2wG634/Lly5iYmIDT6UR1dTUaGhrmTeTe2tqKqqoq2Gw29Pf3\nZy14mchy+b1aN9ElUlvsHq+Mo1uSKuavv/46nnvuOXz22Wf49NNPYbPZ0NbWBqfTicHBQezduxdt\nbW0AAJ/Ph87OTvh8PvT19eHEiRNSfjBq0MLkWTw6IDVkoyso1XWWlJQoHkMuJSzmd+7cwaVLl3Ds\n2DEAX+65rV27Fr29vXC73QAAt9uN7u5uAEBPTw+am5thMplgtVpRWVmJgYGBLL4F/ZBl7530I1tD\n8FJdbzZGUaW6zqmpKcVjyKWEx9R+vx9PPPEEXn75ZfzjH//A008/jV/84hcIBoMwm80AALPZjGAw\nCAAYHR3F7t27o6+3WCwIBAKL1tvS0hJ97HA44HA4MnwrlK+8Xi+8Xq/aYUTJlNvZOlmbrfUWFBSk\ndaS/3IlDrZ20jpVKbicczfLJJ5/g61//Ov76179i165dOHnyJFavXo23334bt2/fji732GOPYWJi\nAq+99hp2796NI0eOAABeeeUVPPfcc3jhhRf+16jGPjye8c+MTGf89dx2PMztxQoLCxfttRsMhuhP\n7O9kyu2EUVosFlgsFuzatQsA8OKLL+LatWsoKyvD+Pg4AGBsbAwbNmwAAJSXl2N4eDj6+pGREZSX\nl2f8JohIHTJeDbmceN0vQghEIhGpL5pLWMzLysqwadMmDA4OAgA+/vhjbN26FQcPHoTH4wEAeDwe\nNDY2AgBcLhc6OjoQCoXg9/sxNDSEurq6LL4FIsomLR1p0NKSGof2y1/+EkeOHEEoFEJFRQXee+89\nhMNhNDU14fz587Barejq6gIA2O12NDU1wW63w2g0or29XXdbdj2R9UIlokwk6g4rKCiQbiPGK0CR\nfr9iSUmJ9GfAlSBTv6Ke246HfeZLs9lsuHHjxrLLyJTbLOZgwmdKpoTXc9vx6DG3k/mM5/ashRBY\ntWoV7t+/n1ZbMuU2L/cjIqkks7GMHb6YbiGXjXY2OURElDYWcyJKSyYDGzLpuph7baL2Mx14IVv3\nFIs5EaUlk3MDmczXNPfaRO1neu5CtjHnLOZERJB/xlAWcyKS0ooVKxRdn+zXW7CYE5FU5vrCp6en\nEy6TzHr0QvVirqXZ7kibZMwRGWOOpdTY6qUKZnFxcUbrVeLk5FJ96rma11zpHGExJ82TMUdkjDmW\nEjeUWe4Cl0ePHiX1+niEEAlPTmZy8nPuqu5s77nrrpgTkT5lOpokl1fSzhXu9vZ2VdpXAos5pS3T\nQ2UirZgr3CdOnFA5kvSpNjcLUTapOTcLUTZpaqItIiJSFrtZiIh0gMWciEgHclbMf/3rX2Pr1q0o\nLCzEtWvX5v2utbUVVVVVsNls6O/vjz5/9epVbN++HVVVVXj99dezFltfXx9sNhuqqqpw9uzZrLUD\nAMeOHYPZbMb27dujz01MTMDpdKK6uhoNDQ2YnJyM/m6pzyZTw8PD2LNnD7Zu3Ypt27bhrbfeUiWW\n6elp1NfXo6amBna7HW+++aYqcWRCq7nNvFYvrwEVclvkyGeffSb+9a9/CYfDIa5evRp9/p///KfY\nsWOHCIVCwu/3i4qKChGJRIQQQuzatUtcvnxZCCHEgQMHxEcffaR4XLOzs6KiokL4/X4RCoXEjh07\nhM/nU7ydOX/605/EtWvXxLZt26LPff/73xdnz54VQgjR1tYmfvCDHwgh4n824XBYkTjGxsbE9evX\nhRBC3Lt3T1RXVwufz6dKLA8ePBBCCDEzMyPq6+vFpUuXVIkjXVrMbea1+nktRG5zO2d75jabDdXV\n1Yue7+npQXNzM0wmE6xWKyorK3H58mWMjY3h3r170ZtBf+c730F3d7ficQ0MDKCyshJWqxUmkwmH\nDx9GT0+P4u3MeeaZZ1BaWjrvud7eXrjdbgCA2+2Ovs94n83AwIAicZSVlaGmpgYAsGrVKmzZsgWB\nQECVWFauXAkACIVCCIfDKC0tVSWOdGkxt5nX6uc1kNvcVr3PfHR0FBaLJfp/i8WCQCCw6Pny8nIE\nAgHF2w8EAti0adOi9nMpGAzCbDYDAMxmM4LBIIClPxul3bx5E9evX0d9fb0qsUQiEdTU1MBsNkcP\nkdX+TJSgZm4zr9XPayC3ua3onI9OpxPj4+OLnj9z5gwOHjyoZFOK0dq4YIPBsGxMSsd7//59HDp0\nCOfOncPq1atViaWgoAB///vfcefOHezbtw9/+MMfVIljObLlNvNa/bwGcpvbihbzixcvpvya8vJy\nDA8PR/8/MjICi8WC8vJyjIyMzHu+vLxckTiXa394eHje1jEXzGYzxsfHUVZWhrGxMWzYsCFubEp/\nBjMzMzh06BCOHj2KxsZGVWMBgLVr1+L555/H1atXVY0jHtlym3mtnbwGcpPbqnSziJjrlFwuFzo6\nOhAKheD3+zE0NIS6ujqUlZVhzZo1uHz5MoQQuHDhQvQPo6SdO3diaGgIN2/eRCgUQmdnJ1wul+Lt\nLMflcsHj8QAAPB5P9H0u9dkoQQiB48ePw2634+TJk6rFcuvWrejZ/KmpKVy8eBG1tbWqfCZK0Epu\nM6/VzWtAhdxW7LRtAr/5zW+ExWIRK1asEGazWezfvz/6u5/85CeioqJCbN68WfT19UWf/+STT8S2\nbdtERUWFeO2117IW24cffiiqq6tFRUWFOHPmTNbaEUKIw4cPi40bNwqTySQsFot49913xRdffCH2\n7t0rqqqqhNPpFLdv344uv9Rnk6lLly4Jg8EgduzYIWpqakRNTY346KOPch7Lp59+Kmpra8WOHTvE\n9u3bxU9/+lMhhFDlM0mXVnObea1eXguR+9zm5fxERDqg+mgWIiLKHIs5EZEOsJgTEekAizkRkQ6w\nmBMR6QCLORGRDvw/STx7DIatJXsAAAAASUVORK5CYII=\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0x5385dd0>"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "<matplotlib.figure.Figure at 0x4c4ef90>"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "markdown",
