integrate new dataloading

--- a/Wiki Category Matrix Maker.ipynb
+++ b/Wiki Category Matrix Maker.ipynb
@@ -8904,7 +8904,13 @@
       "    Type \"help\", \"copyright\", \"credits\" or \"license\" for more information.\n",
       "    >>> import MySQLdb\n",
       "    \n",
-      "    >>> conn = MySQLdb.connect(host='enwiki.labsdb', db=\"enwiki_p\", port=3306, read_default_file=\"./replica.my.cnf\")\n"
+      "    >>> conn = MySQLdb.connect(host='enwiki.labsdb', db=\"enwiki_p\", port=3306, read_default_file=\"./replica.my.\n",
+      "    \n",
+      "how to get this working on wmflabs\n",
+      "\n",
+      "    (maker)local-viafbot@tools-login:~/contagion$ jsub -mem 4g maker/bin/python ~/contagion/wiki_econ_capabil\n",
+      "ity/make_category_data.py\n",
+      "\n"
      ]
     },
     {
