before merging w_star into master

--- a/Wiki Category Matrix Maker.ipynb
+++ b/Wiki Category Matrix Maker.ipynb
@@ -37,13 +37,20 @@
      "outputs": [
       {
        "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "VERBOSE:pywiki:Starting 1 threads...\n"
+       ]
+      },
+      {
+       "output_type": "stream",
        "stream": "stdout",
        "text": [
         "Populating the interactive namespace from numpy and matplotlib\n"
        ]
       }
      ],
-     "prompt_number": 64
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -118,7 +125,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 46
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -183,7 +190,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 57
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -194,7 +201,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -340,7 +347,44 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 81
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def make_snapshots(periods=10):\n",
+      "    period_len = len(min_revisions)/float(periods)\n",
+      "    \n",
+      "    snapshot_dates = list()\n",
+      "    \n",
+      "    for i in range(1, periods+1):\n",
+      "        start = int(0)\n",
+      "        end = int(floor(i*period_len)) - 1\n",
+      "        print \"b \",str(start),'   e ',str(end)  \n",
+      "        \n",
+      "        snapshot_dates.append(sorted_min_revisions[start:end].last_valid_index())\n",
+      "        \n",
+      "        snapshots[i] = sorted_min_revisions[start:end]\n",
+      "    \n",
+      "    \n",
+      "    for i, df in snapshots.iteritems():\n",
+      "        directory = name\n",
+      "        today = str(datetime.date.today())\n",
+      "        double_directory = 'savedata/' + directory + '/' + today + '/'\n",
+      "        \n",
+      "        if not os.path.exists(double_directory):\n",
+      "            os.makedirs(double_directory)\n",
+      "        filename = double_directory  + str(i) + '.json'\n",
+      "        f = open(filename, 'w')\n",
+      "        \n",
+      "        snapshots[i].to_json(f)\n",
+      "    \n",
+      "    return {'snapshots': snapshots, 'snapshot_dates':snapshot_dates}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -360,7 +404,175 @@
        ]
       }
      ],
-     "prompt_number": 82
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ele.all_revisions.head()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>article</th>\n",
+        "      <th>user</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>2012-08-15 16:48:37</th>\n",
+        "      <td> Jacky Boxberger</td>\n",
+        "      <td> Gildir</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2012-08-15 16:50:03</th>\n",
+        "      <td> Jacky Boxberger</td>\n",
+        "      <td> Gildir</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2012-08-15 16:51:49</th>\n",
+        "      <td> Jacky Boxberger</td>\n",
+        "      <td> Gildir</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2012-08-15 16:58:44</th>\n",
+        "      <td> Jacky Boxberger</td>\n",
+        "      <td> Gildir</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2012-08-15 17:07:06</th>\n",
+        "      <td> Jacky Boxberger</td>\n",
+        "      <td> Gildir</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 28,
+       "text": [
+        "                             article    user\n",
+        "2012-08-15 16:48:37  Jacky Boxberger  Gildir\n",
+        "2012-08-15 16:50:03  Jacky Boxberger  Gildir\n",
+        "2012-08-15 16:51:49  Jacky Boxberger  Gildir\n",
+        "2012-08-15 16:58:44  Jacky Boxberger  Gildir\n",
+        "2012-08-15 17:07:06  Jacky Boxberger  Gildir"
+       ]
+      }
+     ],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "j = ele.articles[1]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def text_at_time(article, latest_time):\n",
+      "    "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "map(lambda a: a[1].timestamp ,  sorted(j._revisions.iteritems(), key=operator.itemgetter(1)) )"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        "[Timestamp(2013, 9, 29, 22, 34, 40),\n",
+        " Timestamp(2013, 7, 11, 20, 58, 43),\n",
+        " Timestamp(2013, 7, 7, 16, 58, 24),\n",
+        " Timestamp(2013, 6, 7, 1, 24, 42),\n",
+        " Timestamp(2013, 4, 21, 12, 37, 19),\n",
+        " Timestamp(2012, 12, 30, 9, 22, 17),\n",
+        " Timestamp(2012, 11, 17, 2, 57, 40),\n",
+        " Timestamp(2012, 10, 27, 23, 45, 25),\n",
+        " Timestamp(2012, 10, 26, 8, 29, 37),\n",
+        " Timestamp(2012, 10, 26, 8, 28, 50),\n",
+        " Timestamp(2012, 8, 15, 17, 33, 7),\n",
+        " Timestamp(2012, 7, 29, 1, 56, 17),\n",
+        " Timestamp(2012, 6, 5, 2, 47, 47),\n",
+        " Timestamp(2011, 9, 10, 8, 34, 53),\n",
+        " Timestamp(2011, 8, 14, 3, 20, 24),\n",
+        " Timestamp(2011, 6, 14, 1, 11, 59),\n",
+        " Timestamp(2011, 3, 30, 17, 3, 46),\n",
+        " Timestamp(2011, 2, 9, 21, 29, 15),\n",
+        " Timestamp(2010, 11, 16, 21, 33, 21),\n",
+        " Timestamp(2010, 9, 4, 14, 3, 13),\n",
+        " Timestamp(2010, 7, 17, 22, 11, 13),\n",
+        " Timestamp(2006, 1, 25, 21, 26, 42),\n",
+        " Timestamp(2010, 7, 17, 22, 11, 4),\n",
+        " Timestamp(2010, 7, 14, 6, 49, 2),\n",
+        " Timestamp(2010, 6, 25, 15, 9),\n",
+        " Timestamp(2010, 5, 14, 13, 23, 25),\n",
+        " Timestamp(2010, 5, 4, 0, 56, 41),\n",
+        " Timestamp(2009, 12, 11, 3, 6, 7),\n",
+        " Timestamp(2008, 9, 1, 4, 57, 33),\n",
+        " Timestamp(2008, 8, 10, 22, 14, 57),\n",
+        " Timestamp(2008, 3, 2, 20, 35, 14),\n",
+        " Timestamp(2007, 12, 26, 17, 18, 27),\n",
+        " Timestamp(2007, 12, 26, 17, 16, 38),\n",
+        " Timestamp(2007, 12, 26, 17, 13, 27),\n",
+        " Timestamp(2007, 12, 26, 17, 11, 44),\n",
+        " Timestamp(2007, 12, 24, 21, 21, 7),\n",
+        " Timestamp(2007, 12, 10, 5, 10, 9),\n",
+        " Timestamp(2007, 11, 25, 22, 3, 54),\n",
+        " Timestamp(2007, 11, 25, 21, 56, 8),\n",
+        " Timestamp(2007, 11, 19, 20, 34, 54),\n",
+        " Timestamp(2007, 11, 19, 20, 33, 49),\n",
+        " Timestamp(2007, 11, 1, 2, 27, 49),\n",
+        " Timestamp(2007, 9, 22, 6, 46, 37),\n",
+        " Timestamp(2007, 7, 16, 23, 48, 38),\n",
+        " Timestamp(2006, 9, 8, 8, 30, 39),\n",
+        " Timestamp(2006, 8, 10, 15, 53),\n",
+        " Timestamp(2006, 4, 12, 5, 29, 30),\n",
+        " Timestamp(2006, 1, 26, 4, 0, 47),\n",
+        " Timestamp(2006, 1, 26, 3, 58, 52),\n",
+        " Timestamp(2006, 1, 26, 3, 58, 23),\n",
+        " Timestamp(2006, 1, 26, 3, 57, 30),\n",
+        " Timestamp(2006, 1, 26, 3, 55, 11),\n",
+        " Timestamp(2006, 1, 26, 3, 53, 45),\n",
+        " Timestamp(2006, 1, 26, 3, 53, 19),\n",
+        " Timestamp(2006, 1, 26, 3, 52, 18),\n",
+        " Timestamp(2006, 1, 26, 3, 49, 10),\n",
+        " Timestamp(2006, 1, 26, 3, 46, 35),\n",
+        " Timestamp(2006, 1, 26, 3, 45, 7),\n",
+        " Timestamp(2006, 1, 26, 3, 33, 30),\n",
+        " Timestamp(2006, 1, 26, 3, 23, 2),\n",
+        " Timestamp(2006, 1, 26, 3, 22, 7),\n",
+        " Timestamp(2006, 1, 26, 3, 19, 53)]"
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -6843,6 +7055,67 @@
       }
      ],
      "prompt_number": 56
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def snapshot_data():\n",
+      "    return {'contributor_matrix': None,\n",
+      "            'user_dict': None,\n",
+      "            'article_dict': None,\n",
+      "            'user_exogenous_ranks': None,\n",
+      "            'article_exogenous_ranks': None,\n",
+      "            'pca_fracs': None}\n",
+      "\n",
+      "snapshots = defaultdict(snapshot_data)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "snapshots = defaultdict(snapshot_data)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "snapshots[1]['M'] = 'pig'"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "snapshots"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": [
+        "defaultdict(<function snapshot_data at 0x4eb5e60>, {1: {'user_exogenous_ranks': None, 'article_dict': None, 'article_exogenous_ranks': None, 'M': 'pig', 'pca_fracs': None, 'user_dict': None, 'contributor_matrix': None}})"
+       ]
+      }
+     ],
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
